--- a/index.html
+++ b/index.html
@@ -4,50 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="coinzilla" content="876e6032c5174633e8f3eef3d3df0f9e" />
-    <title>Maestro Tarot | Resultados y Numerología</title>
+    <title>Maestro Tarot | Resultados en Vivo</title>
     <style>
-        body { background-color: #0b0b1a; color: white; font-family: sans-serif; text-align: center; padding: 10px; margin: 0; }
-        .banner-publi { background: linear-gradient(45deg, #1a1a2e, #16213e); border: 1px dashed gold; padding: 15px; margin: 20px auto; max-width: 728px; border-radius: 8px; }
-        .seccion { background: #16213e; padding: 20px; border-radius: 15px; max-width: 600px; margin: 20px auto; border: 1px solid #333; }
-        .card-container { display: flex; justify-content: center; gap: 10px; margin: 20px 0; flex-wrap: wrap; }
-        .card { width: 70px; height: 110px; background: #2a2a4a; border: 2px solid gold; border-radius: 10px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 24px; }
-        button { background: gold; color: black; border: none; padding: 10px 20px; font-weight: bold; cursor: pointer; border-radius: 5px; }
-        footer { font-size: 12px; color: #666; margin: 40px 0; }
+        body { background-color: #0b0b1a; color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; text-align: center; padding: 0; margin: 0; }
+        .banner-publi { background: #16213e; border: 1px dashed gold; padding: 10px; margin: 10px auto; max-width: 90%; border-radius: 8px; font-size: 12px; }
+        .seccion { background: #1a1a2e; padding: 15px; border-radius: 15px; max-width: 700px; margin: 15px auto; border: 1px solid #333; box-shadow: 0px 4px 15px rgba(0,0,0,0.5); }
+        h1 { color: gold; font-size: 1.5rem; margin-top: 15px; }
+        h3 { color: #00d4ff; border-bottom: 1px solid #333; padding-bottom: 5px; }
+        .card-container { display: flex; justify-content: center; gap: 8px; margin: 15px 0; }
+        .card { width: 60px; height: 90px; background: #2a2a4a; border: 2px solid gold; border-radius: 8px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 20px; transition: 0.3s; }
+        .card:hover { transform: scale(1.05); background: #35355e; }
+        button { background: gold; color: black; border: none; padding: 12px 25px; font-weight: bold; cursor: pointer; border-radius: 5px; width: 80%; }
+        input { padding: 12px; border-radius: 5px; border: none; width: 70%; margin-bottom: 10px; }
+        footer { font-size: 11px; color: #555; margin: 30px 0; padding-bottom: 20px; }
     </style>
 </head>
 <body>
 
-    <div class="banner-publi">
-        <small>PUBLICIDAD</small><br>
-        ✨ ESPACIO RESERVADO ✨
-    </div>
-
     <h1>🔮 MAESTRO TAROT</h1>
+
+    <div class="banner-publi">
+        ✨ ESPACIO PUBLICITARIO DISPONIBLE ✨
+    </div>
     
     <div class="seccion">
-        <h3>Lectura de 78 Cartas</h3>
+        <h3>⚽ MARCADORES EN DIRECTO</h3>
+        <iframe src="https://www.scorebat.com/embed/livescore/?token=MTc5Mzc3XzE3MzcwMzg1NDZfNmEwZDU1NDExZjdmOWRiYTMwYmE2NmRhNzQ0ZDI5Zjk=" 
+        frameborder="0" width="100%" height="500" allowfullscreen allow='autoplay; fullscreen' 
+        style="width:100%; height:500px; border-radius: 10px;"></iframe>
+    </div>
+
+    <div class="seccion">
+        <h3>🔢 NUMEROLOGÍA DE HOY</h3>
+        <p>Introduce tu fecha para conocer tu vibración:</p>
+        <input type="date" id="fechaNacimiento">
+        <br>
+        <button onclick="calcNum()">CALCULAR NÚMERO</button>
+        <div id="res" style="margin-top:15px; color:gold; font-size: 1.2rem; font-weight:bold;"></div>
+    </div>
+
+    <div class="seccion">
+        <h3>🃏 TIRADA RÁPIDA (78 CARTAS)</h3>
         <div class="card-container">
-            <div class="card" onclick="alert('Consulta privada requerida')">?</div>
-            <div class="card" onclick="alert('Consulta privada requerida')">?</div>
-            <div class="card" onclick="alert('Consulta privada requerida')">?</div>
+            <div class="card" onclick="alert('La carta del Pasado: Revelación inminente.')">?</div>
+            <div class="card" onclick="alert('La carta del Presente: Momento de actuar con cautela.')">?</div>
+            <div class="card" onclick="alert('La carta del Futuro: Éxito en lo profesional.')">?</div>
         </div>
-    </div>
-
-    <div class="seccion">
-        <h3>⚽ MARCADORES EN VIVO</h3>
-        <iframe src="https://www.livescore.cz/livescore.php?id=1&bg=16213e&font=ffffff&link=gold" width="100%" height="400" frameborder="0"></iframe>
-    </div>
-
-    <div class="seccion">
-        <h3>🔢 NUMEROLOGÍA</h3>
-        <input type="date" id="fechaNacimiento" style="padding:10px; width:70%;">
-        <br><br>
-        <button onclick="calcNum()">CALCULAR</button>
-        <div id="res" style="margin-top:15px; color:gold; font-weight:bold;"></div>
+        <small>Haz clic en las cartas para una lectura rápida</small>
     </div>
 
     <footer>
-        <p>© 2026 MaestroTarot.com | <a href="#" style="color:#888;">Legal</a></p>
+        <p>© 2026 MaestroTarot.com | Corazón Fuerte</p>
         <p>Contacto: corazonfuerte@gmx.es</p>
     </footer>
 
@@ -57,7 +64,7 @@
             if(!f) return;
             let s = f.replace(/-/g, '').split('').reduce((a, b) => parseInt(a) + parseInt(b), 0);
             while(s > 9 && s !== 11 && s !== 22) s = s.toString().split('').reduce((a, b) => parseInt(a) + parseInt(b), 0);
-            document.getElementById('res').innerHTML = "NÚMERO DE VIDA: " + s;
+            document.getElementById('res').innerHTML = "TU NÚMERO MAESTRO ES: " + s;
         }
     </script>
 </body>
