--- a/index.html
+++ b/index.html
@@ -4,76 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="coinzilla" content="876e6032c5174633e8f3eef3d3df0f9e" />
-    <title>Maestro Tarot | Predicciones Deportivas</title>
+    <title>Maestro Tarot | Oráculo Deportivo</title>
     <style>
         body { background-color: #0b0b1a; color: white; font-family: 'Segoe UI', sans-serif; text-align: center; margin: 0; padding: 0; }
-        .header { background: linear-gradient(to bottom, #1a1a2e, #0b0b1a); padding: 20px; border-bottom: 2px solid gold; }
-        .seccion { background: #16213e; padding: 15px; border-radius: 15px; max-width: 800px; margin: 20px auto; border: 1px solid #333; }
-        h2 { color: gold; text-transform: uppercase; font-size: 1.2rem; }
-        
-        /* Estilo para las cartas */
+        .seccion { background: #16213e; padding: 15px; border-radius: 15px; max-width: 900px; margin: 20px auto; border: 1px solid gold; box-shadow: 0 0 20px rgba(0,0,0,0.5); }
+        h1 { color: gold; padding: 20px; text-shadow: 2px 2px 5px black; font-size: 2.5rem; }
         .card-container { display: flex; justify-content: center; gap: 15px; margin: 20px 0; }
-        .card { width: 80px; height: 130px; background: #2a2a4a; border: 2px solid gold; border-radius: 10px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 30px; transition: 0.4s; }
-        .card:hover { transform: translateY(-10px) rotate(2deg); box-shadow: 0 0 15px gold; }
-        
-        #resultado-tarot { background: #0f3460; padding: 15px; border-radius: 10px; margin-top: 10px; display: none; border: 1px solid gold; color: #fff; font-weight: bold; }
-        iframe { border-radius: 10px; background: white; }
+        .card { width: 85px; height: 130px; background: #2a2a4a; border: 2px solid gold; border-radius: 10px; cursor: pointer; display: flex; align-items: center; justify-content: center; font-size: 40px; transition: 0.4s; position: relative; }
+        .card:hover { transform: scale(1.1) rotate(3deg); box-shadow: 0 0 20px gold; background: #35355e; }
+        #resultado { margin-top: 25px; padding: 20px; border-radius: 10px; background: #0f3460; border: 1px dashed gold; color: gold; font-size: 1.4rem; font-weight: bold; min-height: 80px; display: none; }
+        .futbol-wrapper { border-radius: 10px; overflow: hidden; background: #fff; }
     </style>
 </head>
 <body>
 
-    <div class="header">
-        <h1>🔮 MAESTRO TAROT</h1>
-        <p>Predicciones de Fútbol y Numerología Sagrada</p>
-    </div>
+    <h1>🔮 MAESTRO TAROT</h1>
 
     <div class="seccion">
-        <h2>⚽ 1. Elige tu Partido de Hoy</h2>
-        <p><small>Busca tu equipo en el panel de abajo</small></p>
-        <iframe src="https://www.scorebat.com/embed/livescore/?token=MTc5Mzc3XzE3MzcwMzg1NDZfNmEwZDU1NDExZjdmOWRiYTMwYmE2NmRhNzQ0ZDI5Zjk=" 
-        frameborder="0" width="100%" height="500" class="scorebat-bt"></iframe>
-    </div>
-
-    <div class="seccion">
-        <h2>🃏 2. Pregunta al Tarot por el Resultado</h2>
-        <p>Concentrate en el equipo que quieres consultar y elige una carta:</p>
-        <div class="card-container">
-            <div class="card" onclick="revelarSuerte('Victoria local')">?</div>
-            <div class="card" onclick="revelarSuerte('Empate técnico')">?</div>
-            <div class="card" onclick="revelarSuerte('Victoria visitante')">?</div>
+        <h2 style="color: gold;">⚽ 1. SELECCIONA TU PARTIDO</h2>
+        <p>Busca en el panel el partido de Champions, Liga o Copa que quieres consultar:</p>
+        <div class="futbol-wrapper">
+            <iframe src="https://scoreboard.broadage.com/widgets/soccer/scoreboard?apiKey=25103a89-0822-4809-9b93-b9d97034c764&colorTheme=light&language=es" 
+            width="100%" height="600" frameborder="0"></iframe>
         </div>
-        <div id="resultado-tarot"></div>
     </div>
 
     <div class="seccion">
-        <h2>🔢 3. Tu Vibración Numérica</h2>
-        <input type="date" id="fecha" style="padding:10px; border-radius:5px;">
-        <button onclick="calc()" style="padding:10px; background:gold; border:none; font-weight:bold; cursor:pointer;">CONSULTAR</button>
-        <p id="res-num" style="color:gold; font-size:1.2rem;"></p>
+        <h2 style="color: gold;">🃏 2. PIDE LA PREDICCIÓN AL ORÁCULO</h2>
+        <p>Concéntrate en el equipo que has elegido arriba y selecciona una carta:</p>
+        <div class="card-container">
+            <div class="card" onclick="revelar()">?</div>
+            <div class="card" onclick="revelar()">?</div>
+            <div class="card" onclick="revelar()">?</div>
+        </div>
+        <div id="resultado"></div>
     </div>
 
     <script>
-        function revelarSuerte(mensaje) {
-            const div = document.getElementById('resultado-tarot');
+        function revelar() {
             const predicciones = [
-                "Los astros indican una energía de victoria clara.",
-                "Cuidado: El Ermitaño sugiere un partido cerrado y pocos goles.",
-                "La Rueda de la Fortuna favorece al equipo visitante en el último minuto.",
-                "El Colgado indica un empate sufrido.",
-                "La Fuerza está con el equipo local, no habrá quien los pare."
+                "🃏 EL SOL: ¡Victoria contundente! El equipo por el que preguntas dominará con luz propia.",
+                "🃏 LA TORRE: ¡Desastre inminente! Una tarjeta roja o un error grave arruinará el partido.",
+                "🃏 EL CARRO: Victoria sufrida. El equipo ganará avanzando con fuerza en el último tramo.",
+                "🃏 EL COLGADO: Las energías están bloqueadas. El empate parece inevitable.",
+                "🃏 EL MAGO: Una genialidad individual (un golazo de falta o regate) decidirá los tres puntos.",
+                "🃏 LA RUEDA DE LA FORTUNA: El destino es caprichoso. Habrá un gol de rebote o fortuna.",
+                "🃏 EL JUICIO: El VAR o un penalti de última hora será el protagonista absoluto."
             ];
             const random = predicciones[Math.floor(Math.random() * predicciones.length)];
-            div.style.display = "block";
-            div.innerHTML = "✨ PREDICCIÓN: " + random;
-        }
-
-        function calc() {
-            const f = document.getElementById('fecha').value;
-            if(!f) return;
-            let s = f.replace(/-/g, '').split('').reduce((a, b) => parseInt(a) + parseInt(b), 0);
-            while(s > 9 && s !== 11 && s !== 22) s = s.toString().split('').reduce((a, b) => parseInt(a) + parseInt(b), 0);
-            document.getElementById('res-num').innerHTML = "TU NÚMERO DE PODER HOY ES EL " + s;
+            const resDiv = document.getElementById('resultado');
+            resDiv.style.display = "block";
+            resDiv.innerHTML = random;
+            resDiv.scrollIntoView({behavior: "smooth"});
         }
     </script>
+
 </body>
 </html>
